feat: update nextjs modes

--- a/slides/nextjs-modes/1-intro.mdx
+++ b/slides/nextjs-modes/1-intro.mdx
@@ -21,6 +21,10 @@ Server Side Rendering
 #### SSG
 Static Site Generation
 
+#### ISG
+Incremental Static Regeneration
+
+
 ---
 
 # Standard behaviour
