--- a/slides/nextjs-modes/2-csr.mdx
+++ b/slides/nextjs-modes/2-csr.mdx
@@ -10,7 +10,7 @@ Client Side Rendering
 
 ---
 
-# CSR
+# CSR - Client Side Rendering
 
 <div className="pt-8"/>
 
@@ -29,7 +29,6 @@ const Profile: NextPage = () => {
 
   return <div>hello {data.name}!</div>
 }
-
 `}
 </CodeSnippet>
 
@@ -45,7 +44,7 @@ const Profile: NextPage = () => {
 
 --- 
 
-# Use cases
+# CSR - Use cases
 
 - Quick prototyping
 - When SEO is not important
