chore: add investment banking slides

--- a/slides/investment-banking/2-capital-markets.mdx
+++ b/slides/investment-banking/2-capital-markets.mdx
@@ -12,7 +12,7 @@
 # Capital Markets
 
 Capital markets are composed of __primary__ and __secondary markets__. 
-The most common capital markets are the stock market and the bond market.
+The __most common capital markets__ are the __stock market__ and the __bond market__.
 
 These markets are divided into two different categories:
 - __Primary Markets__, where new equity stock and bond issues are sold to investors 
@@ -33,13 +33,14 @@ investment banks are involved in both __equity__ and __debt issuing__.
 
 ## __IPO (Initial Public Offering)__ 
 
-Investment banks help companies raise capital via equity issuance in a shape of an IPO.
+One way Investment banks help companies raise capital is via equity issuance in a shape of an IPO.
+This is a long process that required a lot of scrutiny and that's where Investment banks provide most needed help.
 
 This is a process that must be carried out at the right moment, 
 when the company has the __right size__, __profitability levels__, __solid administration, management team and growth__ and 
-it can take between __4-6 months__ to be compleated. Some of the steps/phases might include:
+it can take between __4-6 months__ to be complete. Some of the steps/phases might include:
 
-- Hiring advisors (Legal, Industry experts, Tax and Financials)
+- Hiring advisors (Legal, Industry, Tax and Financials experts)
 - Company Valuation
 - Drafting the Prospectus
 - Book Building
@@ -73,21 +74,21 @@ the stock__ once sufficient demand has been established.
 
 ## Private Placements
 
-Private placement is a common method of __raising business capital__ by offering equity shares. 
+Private placement are also a common method of __raising business capital__ by offering equity shares. 
 Private placements can be done by either __private companies__ wishing to acquire a few select 
 investors or by __publicly traded companies__ as a __secondary stock offering__.
 
 A private placement __has minimal regulatory requirements__ that it must abide by. 
-The investment __does not require a prospectus__ and, quite often, detailed financial information is not disclosed.
+The investment __does not require a prospectus__ and, quite often, detailed financial information is not disclosed or required.
 
 ---
 
 # Capital Markets - Issuing Debt
 
 One way for a business to raise capital is by __selling a portion of the business or 
-equity__ but there is other way, __issuing debt or borrowing capital__.
+equity__ but there's another way, __borrowing capital or issuing debt__.
 
-Investment Companies help by __advising loan terms__, __preparing company presentations__, __finding investors__ and __issuing debt__.
+Investment banks help companies by __advising loan terms__, __preparing company presentations__, __finding investors__ and __issuing debt__.
 
 Debt issuance comes in a form of bonds with maturity of 5, 10 or 20 years and can be:
 - __Fixed Rate Bonds__
