chore: add note

--- a/slides/nextjs-modes/6-end.mdx
+++ b/slides/nextjs-modes/6-end.mdx
@@ -15,6 +15,7 @@ one that better suits your needs.
 
 # Notes
 
+[Example](https://supes.info/)
 [NextJS documentation](https://nextjs.org/docs/basic-features/data-fetching)
 
 ---
