chore: add visibility filter

--- a/slides/nextjs-modes/6-end.mdx
+++ b/slides/nextjs-modes/6-end.mdx
@@ -15,8 +15,8 @@ one that better suits your needs.
 
 # Notes
 
-[Example](https://supes.info/)
-[NextJS documentation](https://nextjs.org/docs/basic-features/data-fetching)
+- [Example](https://supes.info/)
+- [NextJS documentation](https://nextjs.org/docs/basic-features/data-fetching)
 
 ---
 
