--- a/slides/nextjs-modes/4-ssg.mdx
+++ b/slides/nextjs-modes/4-ssg.mdx
@@ -66,7 +66,7 @@ to any requests.
 You can still use __CSR__ methods to fetch new data on the client and keep all the data fresh.
 
 In case you need to have the best of both worlds (__SSR + SSG__), ie, pages generated at build time and still being able to regenerate once the underlined 
-resources change, you'll be better off enabling __ISG__ (Incremental Statis Regeneration).
+resources change, you'll be better off enabling __ISG__ (Incremental Static Regeneration).
 
 </Section>
 
