chore: update investment banking

--- a/slides/investment-banking/1-intro.mdx
+++ b/slides/investment-banking/1-intro.mdx
@@ -43,7 +43,7 @@ Ultimately the source is the __spread__, which is the __interest income__
 # Wholesale Banking
 
 The complete opposite of Retail Banking, these banks dedicate their services to 
-large clients such as, financial institutions, government agencies and large corporatations. 
+large clients such as, financial institutions, government agencies and large corporations. 
 
 
 ## Main Focus
