--- a/slides/investment-banking/4-trading.mdx
+++ b/slides/investment-banking/4-trading.mdx
@@ -11,21 +11,24 @@
 
 # Trading
 
-- Trading & Brokerage (Golden goose) (35% - 50% Global Revenues)
-	- Brokerage (Market making) - Intermediary services
-		- Trade on behalf of clients and profit from a bid/ask spread
-		- Asset Managers buy securities for the long-term
-	- Proprietary Trading 
-		- uses bank's own money to buy securities and sell them at a profit
-		- Buy and sell stocks in order to profit from capital gain
-		- Short-term horizon
-		- Types:
-			- Shares
-			- Bonds
-			- Derivatives (Mostly for hedging purposes and reduce risk or speculative)
-				- Forwards
-				- Futures
-				- Options
-        - Swaps
+__Trading__ is one of the main revenue channels for investment banks, 
+and usually generate between 35%-50% of the total global revenues.
+
+Trading  can be divided into 2 distinct types: __Proprietary trading__ (Trading) 
+or __Brokerage__.
+
+In __brokerage__, the investment bank __trade on behalf of the clients__ and __profit from
+a bid/ask spread__ and tend to have a __long term investment strategy__.
+
+__Proprietary trading__, on the other hand, the bank uses its __own money to buy
+securities__ and __sell them at a profit__ and tend to have a __short-term investment strategy horizon__.
+
+There are multiple types of instruments that investment bank trade, such as:
+__Shares, Bonds, and Derivatives__. 
+
+Derivatives are a very interesting topic and investors mostly use them
+to __reduce investment risk__ (__hedging__) or for __speculative__ reasons. Some derivatives examples
+are: __Forwards__, __Futures__, __Options__ and __Swaps__.
+
 
 </Section>
