--- a/slides/investment-banking/5-asset-management.mdx
+++ b/slides/investment-banking/5-asset-management.mdx
@@ -11,79 +11,31 @@
 
 # Asset Management
 
-- Managing clients investments
-  - Asset Management division offers a wide range of expertise across multiple asset classes and geographical expertise. Goal is to maximise return without assuming excessive risk
-    - Stocks
-      - Small Cap
-      - Large Cap
-      - Blue Chip
-      - Dividend stocks
-      - Emergent Countries (BRIC - Brazil, Russia, India and China)
-    - Bonds
-      - Short Maturity
-      - Long Maturity
-      - Corporate
-      - Government
-    - Commodities
-      - Oil
-      - Gold
-      - Coffee
-      - Corn
-    - Real Estate
-    - Private Equity
-    - Hedge Funds
-  - Services include, Study the market and understanding the client needs, investment strategy, asses risk, implementing the strategy and oversee the investment
-Team / Roles
-  - Sales Force - Responsible for establishing client relationship
-  - Portfolio managers - Responsible for making investment decisions
-  - Researches - Geography, product or industry experts
-- Investment options
-  - Open & Closed-end Funds (Low risk, Low Return)
-  - Real Estate Funds (Mid Risk, Mid Return) (Commercial & Residential)
-  - Private Equity Funds (Minority / Majority stakes on private companies, keep it for 5-10 years and sell at a premium) (High Mid Risk, High Mid return)
-    - Tend to position business for growth
-      - Active Involvement with the target
-      - Advisory
-      - Management rotations
-      - Exit
-    - Different strategies
-      - Lifecycle (young firms, establish companies, distressed companies)
-      - Sectors/Industry
-    - Fund Structure
-      - Limited Partnership (US)
-        - General Partner
-          - Management of the fund
-          - Target company portfolio selection
-          - Post-investment advisory
-          - Charge management fee (2-20%)
-            } 2% management fee
-            } 20% profit after break-even point
-              – Can have a % hurdle rate to define minimum IRR to achieve before accruing carrying interest.
-        - Limited Partner
-          - Provide investment capital
-          - Receive all profits - 20% (from GP)
-      - Closed-end fund (Europe)
-        - (similar to Limited Partnership)
-        - Investors
-          - Provide Capital
-        - Asset Management Company (AMC)
-          - Manage the Fund
-      - Lifecycle
-        - Formation (2 months - 3 years)
-          - Allow collection of funds
-          - Depends on reputation of the management firm and demand
-        - Investment Period (up to 5y)
-          - Identify target companies
-          - Optimise the portfolio of companies
-          - Change of Management 
-          - Very hand-on with the business
-        - Divestiture (up to 5y)
-          - General state of economy
-          - Market volatility
-          - Finding the right buyer
-        - Fund close
-          - Profit distribution
-				
-Hedge Funds and Alternative Investments (High Risk, High Return)
+Investment banks also might provide an __asset management__ service and 
+offers a wide range of __expertise across multiple asset classes__, 
+__geographies__ and __market__. The asset management __goal is to maximise return without 
+assuming excessive risk__. 
+
+__Services include, market study and understanding the client needs, 
+investment strategy, asses risk, implementing the strategy and oversee
+ the investment__.
+
+Some of the asset classes used in asset management are:
+- __Stocks__ (small-cap, large-cap, blue-chip, dividend stocks, emergent countries)
+- __Bonds__ (short and long term maturity, corporate and government)
+- __Commodities__ (oil, gold, silver, coffee, corn)
+- __Real estate__
+- __Private equity__
+- __Hedge funds__
+
+---
+
+# Asset Management
+
+## Team / Roles
+  
+  - __Sales Force__ - Responsible for establishing client relationship
+  - __Portfolio managers__ - Responsible for making investment decisions
+  - __Researches__ - Geography, product or industry experts
 
 </Section>
