--- a/slides/investment-banking/6-end.mdx
+++ b/slides/investment-banking/6-end.mdx
@@ -1,18 +1,16 @@
 <Section>
 
 <Cover>
-  # Take away
+  # Notes
 </Cover>
 
 ---
 
-# Summary
+# Sources
 
-
----
-
-# Notes
-
+- [Investopedia](https://www.investopedia.com/)
+- [CFI](https://corporatefinanceinstitute.com/)
+- [Udemy - finance and accounting](https://www.udemy.com/courses/finance-and-accounting/)
 
 ---
 
