chore: update investment banking

--- a/slides/investment-banking/2-capital-markets.mdx
+++ b/slides/investment-banking/2-capital-markets.mdx
@@ -60,12 +60,12 @@ The issuance is an already publicly traded company that is coming back to the ma
 
 There are two types of SEOs: __diluted__ and __non-diluted__ offerings. 
 A __diluted follow-on offering__ results in the company issuing new shares after the IPO, 
-which causes the lowering of a company's earnings per share (EPS).
+which causes the lowering of a company's __earnings per share__ (EPS).
 
 During a __non-diluted follow-on offering__, shares coming into the market 
-__are already existing__ and the EPS remains unchanged.
+__are already existing__ and the __EPS__ remains unchanged.
 
-The main role of an investment bank will be to __create a list of potential buyers__ and __underwrite 
+The main role of an investment bank is to __create a list of potential buyers__ and __underwrite 
 the stock__ once sufficient demand has been established.
 
 --- 
@@ -75,6 +75,7 @@ the stock__ once sufficient demand has been established.
 ## Private Placements
 
 Private placement are also a common method of __raising business capital__ by offering equity shares. 
+
 Private placements can be done by either __private companies__ wishing to acquire a few select 
 investors or by __publicly traded companies__ as a __secondary stock offering__.
 
