--- a/slides/investment-banking/4-trading.mdx
+++ b/slides/investment-banking/4-trading.mdx
@@ -12,7 +12,7 @@
 # Trading
 
 __Trading__ is one of the main revenue channels for investment banks, 
-and usually generate between 35%-50% of the total global revenues.
+and tend to generate __35%-50%__ of the total global revenues.
 
 Trading  can be divided into 2 distinct types: __Proprietary trading__ (Trading) 
 or __Brokerage__.
