--- a/slides/investment-banking/5-asset-management.mdx
+++ b/slides/investment-banking/5-asset-management.mdx
@@ -11,14 +11,13 @@
 
 # Asset Management
 
-Investment banks also might provide an __asset management__ service and 
+Investment banks also might provide an __asset management__ service that 
 offers a wide range of __expertise across multiple asset classes__, 
 __geographies__ and __market__. The asset management __goal is to maximise return without 
 assuming excessive risk__. 
 
 __Services include, market study and understanding the client needs, 
-investment strategy, asses risk, implementing the strategy and oversee
- the investment__.
+investment strategy, risk assessment, strategy implementation, and investment overseeing__.
 
 Some of the asset classes used in asset management are:
 - __Stocks__ (small-cap, large-cap, blue-chip, dividend stocks, emergent countries)
