chore: update cap markets

--- a/slides/investment-banking/2-capital-markets.mdx
+++ b/slides/investment-banking/2-capital-markets.mdx
@@ -91,7 +91,7 @@ equity__ but there's another way, __borrowing capital or issuing debt__.
 
 Investment banks help companies by __advising loan terms__, __preparing company presentations__, __finding investors__ and __issuing debt__.
 
-Debt issuance comes in a form of bonds with maturity of 5, 10 or 20 years and can be:
+Debt issuance comes in a form of bonds with maturity of 5, 10, 20+ years and can be:
 - __Fixed Rate Bonds__
   - Fixed interest rate (correlated to company's __Credit Rating__)
 - __Floating Rate Bonds__
